SFR-318: Fixed rows aligning and capitalized rows titles.

--- a/src/components/pages/index/connections/style.css
+++ b/src/components/pages/index/connections/style.css
@@ -69,4 +69,5 @@
 	width: 16%;
 	padding-top: 4px;
 	font-size: inherit;
+	line-height: 26px;
 }
